# meshcore-rpc-services

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
deploy/: DEPLOY.md  install.sh
deploy/systemd/: meshcore-mqtt.service  meshcore-rpc-services.service  meshcore-tak-bridge.service
deploy/udev/: 99-meshcore-gateway.rules
docker/: mosquitto.conf
meshcore_app/: __init__.py  __main__.py  cli.py  config.py  mqtt_bus.py  persistence.py  router.py  schemas.py  service.py  timeouts.py
meshcore_app/handlers/: __init__.py  base.py  gateway_status.py  ping.py
meshcore_rpc_services/: __init__.py  __main__.py  cli.py  config.py  core.py  errors.py  geo.py  gpsd.py  lifecycle.py  mqtt_bus.py  persistence.py  ports.py  retention.py  router.py  schemas.py  service.py  state.py
meshcore_rpc_services/handlers/: __init__.py  base.py  base_location.py  echo.py  gateway_status.py  node_last_seen.py  node_location.py  node_location_report.py  node_status.py  ping.py  return_to_base.py  time_now.py
meshcore_rpc_services/mqtt/: __init__.py  topics.py
meshcore_rpc_services/persistence/: __init__.py  schema.sql  sqlite.py
meshcore_rpc_services/tak/: __init__.py  bridge.py  cli.py  cot.py  takserver.py
meshcore_rpc_services/timeouts/: __init__.py  policy.py  tracker.py
meshcore_rpc_services/transport/: __init__.py  adapter.py  bus.py  service.py
scripts/: seed_gateway_status.py  send_request.py
tests/: _fakes.py  conftest.py  test_adapter.py  test_base_location_handler.py  test_bus_status_parsing.py  test_core_pipeline.py  test_cot.py  test_echo_handler.py  test_gateway_status_handler.py  test_geo.py  test_gpsd.py  test_node_last_seen_handler.py  test_node_location_handler.py  test_node_location_report_handler.py  test_node_status_handler.py  test_persistence.py  test_ping_handler.py  test_radio_metadata.py  test_retention.py  test_return_to_base_handler.py  test_router.py  test_schemas.py  test_state_aggregator.py  test_tak_bridge.py  test_time_now_handler.py  test_timeout_policy.py  test_timeouts.py  test_topics.py
tests/integration/: conftest.py  test_end_to_end.py  test_gateway_contract.py
