[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshcore-app"
version = "0.1.0"
description = "Application-layer RPC services for a MeshCore + MQTT network."
requires-python = ">=3.10"
dependencies = [
    "aiomqtt>=2.3.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "click>=8.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
meshcore-app = "meshcore_app.cli:main"

[tool.setuptools.packages.find]
include = ["meshcore_app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
