[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshcore-rpc-services"
dynamic = ["version"]
description = "Application-layer RPC services for a MeshCore + MQTT network."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications",
]
dependencies = [
    "aiomqtt>=2.3.0",
    "paho-mqtt>=2.0.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "click>=8.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
integration = [
    "paho-mqtt>=2.0.0",
]

[project.scripts]
meshcore-rpc-services = "meshcore_rpc_services.cli:main"
meshcore-tak-bridge = "meshcore_rpc_services.tak.cli:main"

[tool.setuptools.package-data]
meshcore_rpc_services = ["persistence/schema.sql"]

[tool.setuptools.dynamic]
version = { attr = "meshcore_rpc_services.__version__" }

[tool.setuptools.packages.find]
include = ["meshcore_rpc_services*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running MQTT broker",
]
